SERVER-88591 seekWTCursorInternal may return early causing use-after-free (#20457)

GitOrigin-RevId: 1df4789a90b4804303c8360ae895a143f92a232c